objects/datamask__Masking_Field__mdt.object
<CustomObject>
    <fields>
        <fullName>datamask__API_Name__c</fullName>
        <label>API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datamask__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>datamask__Custom_Pattern__c</fullName>
        <label>Custom Pattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datamask__Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>datamask__Date_Max__c</fullName>
        <label>Date Max</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>datamask__Date_Min__c</fullName>
        <label>Date Min</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>datamask__Field_Length__c</fullName>
        <label>Field Length</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>datamask__Field_Type__c</fullName>
        <label>Field Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datamask__Masking_Category__c</fullName>
        <label>Masking Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datamask__Masking_Object__c</fullName>
        <label>Masking Object</label>
        <referenceTo>datamask__Masking_Object__mdt</referenceTo>
        <relationshipLabel>Masking Fields</relationshipLabel>
        <relationshipName>Masking_Fields</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>datamask__Masking_Type__c</fullName>
        <label>Masking Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datamask__Pattern_Data__c</fullName>
        <label>Pattern Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>datamask__Range_Max__c</fullName>
        <label>Range Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>datamask__Range_Min__c</fullName>
        <label>Range Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>datamask__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>datamask__Unique__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unique</label>
        <type>Checkbox</type>
    </fields>
    <label>Masking Field</label>
    <pluralLabel>Masking Fields</pluralLabel>
</CustomObject>